--- a/index.html
+++ b/index.html
@@ -4,26 +4,28 @@
   <meta charset="UTF-8" />
   <title>PermitBot – Volusia & Flagler Permit Assistant</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="AI-powered permit assistant for Volusia and Flagler County civil and building workflows." />
 
-  <!-- Tailwind config with your brand colors -->
+  <!-- 🔥 Tailwind config must use tailwind.config = { } -->
   <script>
     tailwind.config = {
       theme: {
         extend: {
           colors: {
             brand: {
-              teal: '#00E5FF',  // neon cyan
-              bg: '#F7F4EC',    // background tone
-              dark: '#111827'   // dark text
+              teal: '#00E5FF',
+              bg: '#F7F4EC',
+              dark: '#111827'
             }
           }
         }
       }
     }
   </script>
+
+  <!-- Load Tailwind -->
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body class="bg-brand-bg text-brand-dark antialiased">
   <div class="min-h-screen flex flex-col">
     <!-- Header -->
@@ -50,25 +52,22 @@
       <div class="max-w-5xl mx-auto px-4 py-12 grid gap-8 md:grid-cols-[3fr,2fr] items-center">
         <section class="space-y-4">
           <h1 class="text-3xl md:text-4xl font-semibold tracking-tight">
-            AI that builds your permit packet<br />
-            for Volusia &amp; Flagler jobs.
+            AI that builds your permit packet <br />for Volusia & Flagler jobs.
           </h1>
+
           <div class="h-1 w-24 bg-brand-teal rounded-full"></div>
+
           <p class="text-sm leading-relaxed text-slate-700 max-w-xl">
             PermitBot helps civil engineers and contractors figure out which forms, checklists,
-            stormwater docs, FDEP forms, and ROW permits they actually need for a job in
-            Volusia / Flagler and nearby cities.
+            stormwater docs, FDEP forms, and ROW permits they actually need for a job.
           </p>
-          <ul class="text-sm text-slate-700 space-y-1">
-            <li>• Supports Volusia, Flagler, Daytona Beach, Ormond, Palm Coast, Port Orange, NSB</li>
-            <li>• Civil + building workflows: SFR, pools, additions, TIs</li>
-            <li>• Save jobs and come back later</li>
-          </ul>
+
           <div class="flex flex-wrap gap-3 pt-2">
             <a href="signup.html"
                class="rounded-full bg-brand-teal px-5 py-2 text-sm font-semibold text-brand-dark hover:bg-[#00B7CC]">
               Create account
             </a>
+
             <a href="login.html"
                class="rounded-full border border-slate-400 px-5 py-2 text-sm text-brand-dark hover:border-brand-teal">
               Log in to dashboard
@@ -80,15 +79,11 @@
           <div class="rounded-2xl border border-slate-200 bg-white p-4 text-sm shadow-sm">
             <h2 class="text-xs font-semibold text-slate-800 mb-2">What PermitBot does today</h2>
             <ul class="text-xs text-slate-700 space-y-1">
-              <li>• Ask AI which permits/forms you need for a job</li>
-              <li>• See a structured permit packet by category</li>
-              <li>• Save jobs and view them later</li>
-              <li>• Built specifically for your local Florida jurisdictions</li>
+              <li>• Ask AI which permits/forms you need</li>
+              <li>• See a structured permit packet</li>
+              <li>• Save jobs & return later</li>
+              <li>• Built for Volusia & Flagler workflows</li>
             </ul>
-          </div>
-          <div class="rounded-2xl border border-dashed border-brand-teal/60 bg-white/70 p-4 text-xs text-slate-700">
-            <span class="font-semibold text-slate-900">Coming soon:</span>
-            Auto-filled PDF packets and uploads for surveys, plans, and existing forms.
           </div>
         </section>
       </div>
@@ -96,9 +91,8 @@
 
     <!-- Footer -->
     <footer class="border-t border-slate-200 bg-brand-bg">
-      <div class="max-w-5xl mx-auto px-4 py-4 flex flex-col sm:flex-row items-center justify-between gap-2 text-[11px] text-slate-600">
-        <span>© <span id="year"></span> PermitBot.</span>
-        <span>Volusia &amp; Flagler early access.</span>
+      <div class="max-w-5xl mx-auto px-4 py-4 text-[11px] text-slate-600 text-center">
+        © <span id="year"></span> PermitBot.
       </div>
     </footer>
   </div>
@@ -106,5 +100,6 @@
   <script>
     document.getElementById("year").textContent = new Date().getFullYear();
   </script>
+
 </body>
 </html>
