Refactor Tailwind configuration in dashboard.html

--- a/dashboard.html
+++ b/dashboard.html
@@ -6,23 +6,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Manage permit packets with PermitBot Pro." />
   <script>
-    tailwind = {
-      config: {
-        theme: {
-          extend: {
-            colors: {
-              brand: {
-                teal: '#00E5FF',   // neon cyan brand blue
-                bg: '#F7F4EC',
-                dark: '#111827'
-              }
-            }
+  tailwind.config = {
+    theme: {
+      extend: {
+        colors: {
+          brand: {
+            teal: '#00E5FF',
+            bg: '#F7F4EC',
+            dark: '#111827'
           }
         }
       }
     }
-  </script>
-  <script src="https://cdn.tailwindcss.com"></script>
+  }
+</script>
+<script src="https://cdn.tailwindcss.com"></script>
+
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body class="bg-brand-bg text-brand-dark antialiased">
