--- a/login.html
+++ b/login.html
@@ -5,22 +5,23 @@
   <title>Login – PermitBot</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script>
-    tailwind = {
-      config: {
-        theme: {
-          extend: {
-            colors: {
-              brand: {
-                teal: '#00E5FF',   // neon cyan
-                bg: '#F7F4EC',     // background tone
-                dark: '#111827'    // dark text
-              }
-            }
+    <script>
+  tailwind.config = {
+    theme: {
+      extend: {
+        colors: {
+          brand: {
+            teal: '#00E5FF',
+            bg: '#F7F4EC',
+            dark: '#111827'
           }
         }
       }
     }
-  </script>
+  }
+</script>
+<script src="https://cdn.tailwindcss.com"></script>
+
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
