--- a/dashboard.html
+++ b/dashboard.html
@@ -6,23 +6,27 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Manage permit packets with PermitBot Pro." />
 
-  <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Tailwind config + CDN -->
   <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          colors: {
-            brand: {
-              teal: '#00E5FF',
-              bg: '#F7F4EC',
-              dark: '#111827'
+    tailwind = {
+      config: {
+        theme: {
+          extend: {
+            colors: {
+              brand: {
+                teal: '#00E5FF',
+                bg: '#F7F4EC',
+                dark: '#111827'
+              }
             }
           }
         }
       }
     }
   </script>
+  <script src="https://cdn.tailwindcss.com"></script>
 
+  <!-- Supabase -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body class="bg-brand-bg text-brand-dark antialiased">
@@ -34,7 +38,9 @@
           <img src="permitbot-logo.svg" alt="PermitBot logo" class="h-10 w-auto" />
         </a>
         <div class="flex items-center gap-3 text-xs">
-          <span class="hidden sm:inline text-slate-600">Volusia / Flagler early access</span>
+          <span id="welcome-user" class="hidden sm:inline text-slate-600">
+            Loading user…
+          </span>
           <button
             onclick="logout()"
             class="rounded-full bg-brand-teal px-3 py-1.5 text-brand-dark font-semibold hover:bg-[#00B7CC]">
@@ -109,7 +115,7 @@
                 placeholder="City water/sewer or well/septic, flood zone, wetlands, corner lot, etc."></textarea>
             </div>
 
-            <!-- NEW: Plans upload -->
+            <!-- Plans upload -->
             <div>
               <label class="block text-xs text-slate-700 mb-1">
                 Plans / PDFs for this job (optional)
@@ -159,8 +165,7 @@
           <!-- Recommended order -->
           <div class="rounded-2xl border border-slate-200 bg-white p-4 shadow-sm">
             <h3 class="text-xs font-semibold text-brand-dark mb-1">Suggested order of attack</h3>
-            <ol id="recommended-order" class="list-decimal list-inside text-xs text-slate-700 space-y-1">
-            </ol>
+            <ol id="recommended-order" class="list-decimal list-inside text-xs text-slate-700 space-y-1"></ol>
           </div>
         </section>
 
@@ -190,6 +195,7 @@
     const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImN3c2t0aXRyaHBocHBqbHRucXVqIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjM0MTM4OTMsImV4cCI6MjA3ODk4OTg5M30.4eMRLpadUbS_FEyBH8bsYqsBGX65kUI16WXKAfFXfus";
 
     const supabaseClient = supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+
     let lastAIResult = null;
     let uploadedPlanUrls = [];
 
@@ -199,6 +205,7 @@
       if (!session) {
         window.location.href = "login.html";
       } else {
+        await showWelcomeUser();
         loadJobs();
       }
     }
@@ -208,9 +215,34 @@
       window.location.href = "login.html";
     }
 
+    async function showWelcomeUser() {
+      const welcomeEl = document.getElementById("welcome-user");
+      const { data } = await supabaseClient.auth.getUser();
+      const user = data?.user;
+
+      if (!user) {
+        welcomeEl.textContent = "Welcome";
+        return;
+      }
+
+      const fullName = user.user_metadata?.full_name;
+      if (fullName) {
+        welcomeEl.textContent = `Welcome, ${fullName}`;
+        return;
+      }
+
+      if (user.email) {
+        const username = user.email.split("@")[0];
+        welcomeEl.textContent = `Welcome, ${username}`;
+        return;
+      }
+
+      welcomeEl.textContent = "Welcome";
+    }
+
     requireAuth();
 
-    // Handle plan uploads
+    // Handle plan uploads -> Supabase Storage (bucket: plans)
     const plansInput = document.getElementById("plans-input");
     const plansStatusEl = document.getElementById("plans-status");
 
@@ -299,13 +331,19 @@
           body: JSON.stringify(payload)
         });
 
+        if (!res.ok) {
+          throw new Error("AI endpoint error");
+        }
+
         const data = await res.json();
         lastAIResult = { payload, data };
 
         renderAIResult(data);
       } catch (err) {
+        console.error(err);
         outSummaryJur.textContent = "Error talking to AI.";
-        outSummaryProj.textContent = err.message;
+        outSummaryProj.textContent = "";
+        outSummaryNotes.textContent = err.message;
       }
     }
 
@@ -371,7 +409,7 @@
       });
     }
 
-    // Save job with status + plan URLs
+    // Save job with status + plans
     async function saveJob() {
       const statusEl = document.getElementById("save-status");
       statusEl.textContent = "";
@@ -393,6 +431,8 @@
       const userId = session.user.id;
       statusEl.textContent = "Saving…";
 
+      // If your DB doesn't yet have status/plan_urls, either add them
+      // OR remove these fields from the insert.
       const { error } = await supabaseClient
         .from("jobs")
         .insert({
@@ -406,8 +446,8 @@
         });
 
       if (error) {
-        statusEl.textContent = "Error saving job.";
         console.error(error);
+        statusEl.textContent = "Error saving job.";
       } else {
         statusEl.textContent = "Saved.";
         loadJobs();
