--- a/job.html
+++ b/job.html
@@ -6,23 +6,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="View permit packet details for a saved job." />
 
-  <script src="https://cdn.tailwindcss.com"></script>
   <script>
-    tailwind.config = {
-      theme: {
-        extend: {
-          colors: {
-            brand: {
-              teal: '#00E5FF',
-              bg: '#F7F4EC',
-              dark: '#111827'
+    tailwind = {
+      config: {
+        theme: {
+          extend: {
+            colors: {
+              brand: {
+                teal: '#00E5FF',
+                bg: '#F7F4EC',
+                dark: '#111827'
+              }
             }
           }
         }
       }
     }
   </script>
-
+  <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body class="bg-brand-bg text-brand-dark antialiased">
@@ -34,7 +35,9 @@
           <img src="permitbot-logo.svg" alt="PermitBot logo" class="h-10 w-auto" />
         </a>
         <div class="flex items-center gap-3 text-xs">
-          <span class="hidden sm:inline text-slate-600">Job details</span>
+          <span id="welcome-user" class="hidden sm:inline text-slate-600">
+            Loading user…
+          </span>
           <button
             onclick="logout()"
             class="rounded-full bg-brand-teal px-3 py-1.5 text-brand-dark font-semibold hover:bg-[#00B7CC]">
@@ -58,7 +61,7 @@
         </section>
 
         <!-- Job meta -->
-        <section class="rounded-2xl border border-slate-200 bg-white p-4 text-sm shadow-sm space-y-2">
+        <section class="rounded-2xl border border-slate-200 bg-white p-4 text-sm shadow-sm space-y-3">
           <div class="flex flex-col sm:flex-row sm:items-center justify-between gap-2">
             <div>
               <div class="flex items-center gap-2">
@@ -73,6 +76,24 @@
             <div class="text-[11px] text-slate-500">
               <span id="job-date"></span>
             </div>
+          </div>
+
+          <!-- Status changer -->
+          <div class="flex items-center gap-2 text-[11px] text-slate-700">
+            <span>Update status:</span>
+            <select id="status-select"
+                    class="rounded-full border border-slate-300 bg-white px-2 py-1 text-[11px] text-brand-dark">
+              <option value="Generated">Generated</option>
+              <option value="In Progress">In Progress</option>
+              <option value="Submitted">Submitted</option>
+              <option value="Issued">Issued</option>
+            </select>
+            <button
+              onclick="updateStatus()"
+              class="rounded-full bg-brand-teal px-3 py-1 text-[11px] font-semibold text-brand-dark hover:bg-[#00B7CC]">
+              Save
+            </button>
+            <span id="status-message" class="text-[11px] text-slate-500"></span>
           </div>
         </section>
 
@@ -128,6 +149,7 @@
       if (!session) {
         window.location.href = "login.html";
       } else {
+        await showWelcomeUser();
         loadJob();
       }
     }
@@ -135,6 +157,31 @@
     async function logout() {
       await supabaseClient.auth.signOut();
       window.location.href = "login.html";
+    }
+
+    async function showWelcomeUser() {
+      const welcomeEl = document.getElementById("welcome-user");
+      const { data } = await supabaseClient.auth.getUser();
+      const user = data?.user;
+
+      if (!user) {
+        welcomeEl.textContent = "Job details";
+        return;
+      }
+
+      const fullName = user.user_metadata?.full_name;
+      if (fullName) {
+        welcomeEl.textContent = `Welcome, ${fullName}`;
+        return;
+      }
+
+      if (user.email) {
+        const username = user.email.split("@")[0];
+        welcomeEl.textContent = `Welcome, ${username}`;
+        return;
+      }
+
+      welcomeEl.textContent = "Job details";
     }
 
     function getJobIdFromUrl() {
@@ -168,9 +215,11 @@
 
       const status = job.status || "Generated";
       const statusBadge = document.getElementById("job-status-badge");
+      const statusSelect = document.getElementById("status-select");
       statusBadge.textContent = status;
+      statusSelect.value = status;
 
-      // Plans
+      // Plans list
       const plansEl = document.getElementById("job-plans");
       let planUrls = [];
 
@@ -197,6 +246,27 @@
       }
 
       renderAIResult(job.ai_output || {});
+    }
+
+    async function updateStatus() {
+      const jobId = getJobIdFromUrl();
+      const statusSelect = document.getElementById("status-select");
+      const statusMessage = document.getElementById("status-message");
+      const newStatus = statusSelect.value;
+
+      statusMessage.textContent = "Saving...";
+      const { error } = await supabaseClient
+        .from("jobs")
+        .update({ status: newStatus })
+        .eq("id", jobId);
+
+      if (error) {
+        console.error(error);
+        statusMessage.textContent = "Error saving status.";
+      } else {
+        document.getElementById("job-status-badge").textContent = newStatus;
+        statusMessage.textContent = "Status updated.";
+      }
     }
 
     function renderAIResult(data) {
