--- a/dashboard.html
+++ b/dashboard.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8" />
   <title>Dashboard – PermitBot</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Manage permit packets with PermitBot Pro." />
 
   <!-- Tailwind config + CDN -->
   <script>
@@ -58,12 +57,12 @@
           <h1 class="text-2xl font-semibold text-brand-dark">Dashboard</h1>
           <div class="h-1 w-20 bg-brand-teal rounded-full mt-1"></div>
           <p class="mt-2 text-sm text-slate-700 max-w-xl">
-            Use this dashboard to ask AI which permits/forms and civil/site documents you likely need
-            for a job in Volusia / Flagler and nearby cities. Then save the job to your account.
+            Use this dashboard to ask AI which permits/forms you likely need for a job in Volusia / Flagler
+            and save the job to your account.
           </p>
         </section>
 
-        <!-- Ask AI section -->
+        <!-- Ask AI card -->
         <section class="max-w-3xl space-y-3">
           <h2 class="text-lg font-semibold text-brand-dark">Ask AI for permit suggestions</h2>
           <p class="text-xs text-slate-700">
@@ -143,11 +142,10 @@
           </div>
         </section>
 
-        <!-- AI Result section -->
+        <!-- AI Result -->
         <section class="space-y-3">
           <h2 class="text-sm font-semibold text-brand-dark">AI Result</h2>
 
-          <!-- Summary -->
           <div class="rounded-2xl border border-slate-200 bg-white p-4 shadow-sm">
             <p class="text-xs text-slate-600 mb-1">Interpretation</p>
             <p id="summary-jurisdiction" class="text-sm text-brand-dark mb-1">–</p>
@@ -157,12 +155,10 @@
             </p>
           </div>
 
-          <!-- Categories -->
           <div class="grid md:grid-cols-2 gap-3" id="categories-container">
             <!-- JS injects cards here -->
           </div>
 
-          <!-- Recommended order -->
           <div class="rounded-2xl border border-slate-200 bg-white p-4 shadow-sm">
             <h3 class="text-xs font-semibold text-brand-dark mb-1">Suggested order of attack</h3>
             <ol id="recommended-order" class="list-decimal list-inside text-xs text-slate-700 space-y-1"></ol>
@@ -242,7 +238,7 @@
 
     requireAuth();
 
-    // Handle plan uploads -> Supabase Storage (bucket: plans)
+    // Plans upload
     const plansInput = document.getElementById("plans-input");
     const plansStatusEl = document.getElementById("plans-status");
 
@@ -294,7 +290,7 @@
       }
     }
 
-    // Run AI
+    // Call AI
     async function runPermitAI() {
       const payload = {
         parcel_or_address: document.getElementById("ai-parcel").value,
@@ -409,90 +405,50 @@
       });
     }
 
-   // Save job with status + plans, but fall back if columns don't exist
-async function saveJob() {
-  const statusEl = document.getElementById("save-status");
-  statusEl.textContent = "";
+    // Save job (simple version – base columns only)
+    async function saveJob() {
+      const statusEl = document.getElementById("save-status");
+      statusEl.textContent = "";
 
-  if (!lastAIResult) {
-    statusEl.textContent = "Run AI first before saving.";
-    return;
-  }
+      if (!lastAIResult) {
+        statusEl.textContent = "Run AI first before saving.";
+        return;
+      }
 
-  const { payload, data } = lastAIResult;
+      const { payload, data } = lastAIResult;
 
-  const { data: sessionData } = await supabaseClient.auth.getSession();
-  const session = sessionData?.session;
-  if (!session) {
-    statusEl.textContent = "Not logged in.";
-    return;
-  }
+      const { data: sessionData } = await supabaseClient.auth.getSession();
+      const session = sessionData?.session;
+      if (!session) {
+        statusEl.textContent = "Not logged in.";
+        return;
+      }
 
-  const userId = session.user.id;
-  statusEl.textContent = "Saving…";
+      const userId = session.user.id;
+      statusEl.textContent = "Saving…";
 
-  // Base fields that we KNOW exist in your jobs table
-  const baseRow = {
-    user_id: userId,
-    jurisdiction: payload.jurisdiction,
-    project_type: payload.project_type,
-    parcel: payload.parcel_or_address || payload.parcel || null,
-    ai_output: data
-  };
+      const baseRow = {
+        user_id: userId,
+        jurisdiction: payload.jurisdiction,
+        project_type: payload.project_type,
+        parcel: payload.parcel_or_address || payload.parcel || null,
+        ai_output: data
+      };
 
-  // Extra fields we WANT (but table might not have yet)
-  const extraFields = {
-    status: "Generated",
-    plan_urls: JSON.stringify(uploadedPlanUrls || [])
-  };
-
-  // First try insert with status + plan_urls
-  let { error } = await supabaseClient
-    .from("jobs")
-    .insert({ ...baseRow, ...extraFields });
-
-  // If columns don't exist (error code 42703), retry without them
-  if (error && error.code === "42703") {
-    console.warn("jobs table missing status/plan_urls, saving without them:", error);
-    ({ error } = await supabaseClient
-      .from("jobs")
-      .insert(baseRow));
-  }
-
-  if (error) {
-    console.error("Save job failed:", error);
-    statusEl.textContent = "Error saving job: " + (error.message || "unknown error");
-  } else {
-    statusEl.textContent = "Saved.";
-    loadJobs();
-  }
-}
-
-
-      // If your DB doesn't yet have status/plan_urls, either add them
-      // OR remove these fields from the insert.
-      const { error } = await supabaseClient
+      let { error } = await supabaseClient
         .from("jobs")
-        .insert({
-          user_id: userId,
-          jurisdiction: payload.jurisdiction,
-          project_type: payload.project_type,
-          parcel: payload.parcel_or_address || payload.parcel || null,
-          ai_output: data,
-          status: "Generated",
-          plan_urls: JSON.stringify(uploadedPlanUrls || [])
-        });
+        .insert(baseRow);
 
       if (error) {
-        console.error(error);
-        statusEl.textContent = "Error saving job.";
+        console.error("Save job failed:", error);
+        statusEl.textContent = "Error saving job";
       } else {
         statusEl.textContent = "Saved.";
         loadJobs();
       }
     }
 
-    // Load recent jobs with status badge
+    // Load recent jobs
     async function loadJobs() {
       const listEl = document.getElementById("jobs-list");
       listEl.innerHTML = "<p class='text-xs text-slate-500'>Loading…</p>";
@@ -508,7 +464,7 @@ async function saveJob() {
 
       const { data, error } = await supabaseClient
         .from("jobs")
-        .select("id, created_at, jurisdiction, project_type, parcel, status")
+        .select("id, created_at, jurisdiction, project_type, parcel")
         .eq("user_id", userId)
         .order("created_at", { ascending: false })
         .limit(5);
@@ -527,7 +483,6 @@ async function saveJob() {
       listEl.innerHTML = "";
       data.forEach(job => {
         const created = new Date(job.created_at);
-        const status = job.status || "Generated";
 
         const a = document.createElement("a");
         a.href = `job.html?id=${job.id}`;
@@ -547,9 +502,6 @@ async function saveJob() {
               </div>
             </div>
             <div class="flex flex-col items-end gap-1">
-              <span class="inline-flex items-center rounded-full bg-brand-teal/10 px-2 py-0.5 text-[10px] font-semibold text-brand-dark">
-                ${status}
-              </span>
               <span class="text-[10px] text-slate-500">
                 ${created.toLocaleDateString()}
               </span>
